ICTU20223180-NGUEND ARTHUR JOHANN-helep/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helep
  labels:
    app.kubernetes.io/part-of: helep
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
